<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/saveContactCard"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            >

            <TextView
                android:id="@+id/nameTextViewView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameTview"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Full Name"
                android:hint="@string/nameHint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/phoneTextViewview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneTview"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/phoneNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Phone Number"
                android:hint="@string/phoneNumberHint"
                android:inputType="number"
                tools:ignore="TextFields" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/savebtn"/>

        </LinearLayout>






    </androidx.cardview.widget.CardView>




</RelativeLayout>